--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -51,8 +51,10 @@ jobs:
           git config --global user.name zhbjzhql1
           git add .
           git commit -m "update" -a
-          
-
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v4.0.0
         with:
