--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -5,7 +5,7 @@ on:
     schedule:
       - name: daily_task
         description: Run task every day at 4:00 PM
-        cron: "0 16 * * *"
+        cron: "0 0 0 1/1 * ?"
     branches:
       - main
 env:
