--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -5,7 +5,7 @@ on:
     schedule:
       - name: daily_task
         description: Run task every day at 4:00 PM
-        cron: "0 0 0 1/1 * ?"
+        cron: "0 0 0 1/1 * *"
     branches:
       - main
 env:
@@ -55,3 +55,4 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          
