--- a/.github/workflows/1.yml
+++ b/.github/workflows/1.yml
@@ -26,7 +26,7 @@ jobs:
           python-version: 3.x
 
       - name: Install dependencies
-        run: pip install selenium requests m3u8 mysql
+        run: pip install selenium requests m3u8 mysql.connector
         
       - name: Run script
         run: python ${{ github.workspace }}/spider-iptv.py
