--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -43,7 +43,7 @@ jobs:
           sudo ln -sf /usr/local/bin/chrome-headless-shell-linux64/chrome-headless-shell /usr/local/bin/chromedriver
           sudo chmod +x /usr/local/bin/chromedriver
       - name: Run script
-        run: python ${{ github.workspace }}/IPTV.py
+        run: python ${{ github.workspace }}/spider-iptv.py
      
       - name: commit
         run: |
