--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -30,7 +30,7 @@ jobs:
           python-version: 3.x
 
       - name: Install dependencies
-        run: pip install selenium requests typing_extensions
+        run: pip install selenium requests typing_extensions m3u8
 
       - name: Install Chrome WebDriver
         run: |
